[tool.poetry]
name = "gekkota"
version = "0.5.3"
description = "Python code-generation for Python"
authors = ["Dmitry Gritsenko <k01419q45@ya.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/courage-tci/gekkota"
homepage = "https://github.com/courage-tci/gekkota"
keywords = ["codegen"]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
