[tool.poetry]
name = "gekkota"
version = "0.6.0"
description = "Python code-generation for Python"
authors = ["Dmitry Gritsenko <k01419q45@ya.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/courage-tci/gekkota"
homepage = "https://github.com/courage-tci/gekkota"
keywords = ["codegen"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.4.0"
wordstreamer = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyright = "^1.1.348"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "warning" # GetAttr.getattr workaround, probably wontfix
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"